--- a/index.html
+++ b/index.html
@@ -8,29 +8,50 @@
     <link rel="shortcut icon" href="imagens/logotipo.png" sizes = "16x16">
     <link rel="stylesheet" href="css/style.css"> 
 </head>
+
 <body>
-    <div class="container">
-        <header>
-            <div class="logo">
-                <img src="imagens/logotipo.png">
-            </div>
-            <!--Menu Principal-->
-            <nav class="menu">
-                <ul>
-                    <li><a href="#home">Home</a></li>
-                    <li><a href="">About me</a></li>
-                    <li><a href="">Portifólio</a></li>
-                    <li><a href="">Contact</a></li>
-                </ul>
-            </nav>
-        </header>
-        <main class="home">
+    <header>
+        <div class="logo">
+            <img src="imagens/logotipo.png">
+        </div>
+        <!--MENU PRINCIPAL-->
+        <nav class="menu">
+            <ul>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#about">Sobre Mim</a></li>
+                <li><a href="">Portifólio</a></li>
+                <li><a href="">Contato</a></li>
+            </ul>
+        </nav>
+    </header>
+    <!--MENU HOME-->
+    <section id="home">
+        <div class="container">
             <div class="titulo">
-                <p>Bem-vindos ao meu</p>
-                <h1>Portifólio Pessoal</h1>
+                <h1>Vitória Gomes</h1>
+                <p>Creative Developer</p>
             </div>
             <img src="imagens/Prancheta1.png" id="prancheta-dois">
-        </main>
-    </div>
+        </div>
+    </section>
+    <section id="about">
+        <div class="container">
+            <div class="titulo">
+                <h1>Sobre Mim</h1>
+                <h2>Recife, Pernambuco</h2>
+                <p>Aos 17 anos comecei na área de engenharia ambiental, realizei alguns 
+                    projetos de pesquisa e em 2020 estagiei em uma startup chamada Recibra, 
+                    voltada a logistica reversa de aparelhos eletroeletrônicos e a inclusão digital.
+                    Foi aí que meu interesse pela área de tecnologia começou e neste mesmo ano iniciei
+                    minha faculdade de Análise de Desenvolvimento de Sistemas.
+                </p>
+                <p> Hoje já entendo de desenvolvimento Para o Front-End com ferramentas como 
+                    HTML, CSS, JavaScript e Python. Estou buscando aprender e me aprimorar cada vez mais.
+                </p>
+            </div>
+            <img src="imagens/img2.png" id="img-dois">
+        </div>
+
+    </section>
 </body>
 </html>
