Up part experiencia

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
             <ul>
                 <li><a href="#home">Home</a></li>
                 <li><a href="#about">Sobre Mim</a></li>
-                <li><a href="">Portifólio</a></li>
-                <li><a href="">Contato</a></li>
+                <li><a href="#portifolio">Experiência</a></li>
+                <li><a href="#contato">Contato</a></li>
             </ul>
         </nav>
     </header>
@@ -34,6 +34,7 @@
             <img src="imagens/Prancheta1.png" id="prancheta-dois">
         </div>
     </section>
+    <!--MENU ABOUT ME-->
     <section id="about">
         <div class="container">
             <div class="titulo">
@@ -45,13 +46,58 @@
                     Foi aí que meu interesse pela área de tecnologia começou e neste mesmo ano iniciei
                     minha faculdade de Análise de Desenvolvimento de Sistemas.
                 </p>
-                <p> Hoje já entendo de desenvolvimento Para o Front-End com ferramentas como 
+                <p> Hoje já compreendo de desenvolvimento para Front-End com ferramentas como 
                     HTML, CSS, JavaScript e Python. Estou buscando aprender e me aprimorar cada vez mais.
                 </p>
             </div>
             <img src="imagens/img2.png" id="img-dois">
         </div>
-
     </section>
+    <!--MENU PORTIFOLIO-->
+    <section id="portifolio">
+        <div class="container">
+            <input type="radio" name="slide" id="item-1" checked>
+            <input type="radio" name="slide" id="item-2">
+            <input type="radio" name="slide" id="item-3">
+            <div class="cards">
+                <label class="card" for="item-1" id="song-1">
+                    <img src="imagens/folhas.jpg" alt="">
+                    <h1>Insole</h1>
+                    <p>Uma clean-fintech que oferece soluções financeiras, focada em energia solar.
+                        Fui estágiaria no setor fundiário realizando avaliações de áreas remotas, controle
+                        da base de dados do setor e contribuindo para realização e preenchimento de contratos.
+                        Permaneci na empresa de Outubro-2021 até Março-2022.
+                    </p>
+                </label>
+                <label class="card" for="item-2" id="song-2">
+                    <img src="imagens/folhas.jpg" alt="">
+                    <h1>Linguagens</h1>
+                    <nav>
+                        <ul>
+                            <li id="sem-ponto">Tenho experiência a um pouco menos de 1 ano com as seguintes linguagens:</li>
+                            <li>HTML - Linguagem de marcação utilizada na construção de páginas na Web. </li>
+                            <li>CSS - Mecanismo para adicionar estilo a um documento web.</li>
+                            <li>JavaScript - Liguagem de programação. Juntamente com HTML e CSS, é uma das três principais tecnologias para Front-End.</li>
+                        </ul>
+                    </nav>
+                </label>
+                <label class="card" for="item-3" id="song-3">
+                    <img src="imagens/folhas.jpg" alt="">
+                    <h1>Cursos</h1>
+                    <nav>
+                        <ul>
+                            <li>Programação para Internet com HTML% e CSS3 - Jun de 2022</li>
+                            <li>Programação em Python pela DIO (Digital Innovation One Inc.) - Mar de 2022</li>
+                            <li>Git e Github pela DIO (Digital Innovation One Inc.) - Fev de 2022</li>
+                            <li>Estrutura de Dados e Algoritmos pela DIO (Digital Innovation One Inc.) - Fev de 2022</li>
+                            <li>Logica de Programação pela DIO (Digital Innovation One Inc.) - Jan de 2022</li>
+                            <li>Curso de Business Canvas pela QUALITI - Out de 2021</li>
+                        </ul>
+                    </nav>
+                </label>
+            </div>
+        </div>
+    </section>
+
 </body>
 </html>
