Up part contato

--- a/index.html
+++ b/index.html
@@ -56,12 +56,12 @@
     <!--MENU PORTIFOLIO-->
     <section id="portifolio">
         <div class="container">
-            <input type="radio" name="slide" id="item-1" checked>
-            <input type="radio" name="slide" id="item-2">
-            <input type="radio" name="slide" id="item-3">
-            <div class="cards">
-                <label class="card" for="item-1" id="song-1">
-                    <img src="imagens/folhas.jpg" alt="">
+            <input type="radio" name="slide" id="slide-1" checked>
+            <input type="radio" name="slide" id="slide-2">
+            <input type="radio" name="slide" id="slide-3">
+            <div class="folhas">
+                <label class="folha" for="slide-1" id="estagio-1">
+                    <img src="imagens/folhas.jpg">
                     <h1>Insole</h1>
                     <p>Uma clean-fintech que oferece soluções financeiras, focada em energia solar.
                         Fui estágiaria no setor fundiário realizando avaliações de áreas remotas, controle
@@ -69,8 +69,8 @@
                         Permaneci na empresa de Outubro-2021 até Março-2022.
                     </p>
                 </label>
-                <label class="card" for="item-2" id="song-2">
-                    <img src="imagens/folhas.jpg" alt="">
+                <label class="folha" for="slide-2" id="linguagens">
+                    <img src="imagens/folhas.jpg">
                     <h1>Linguagens</h1>
                     <nav>
                         <ul>
@@ -81,8 +81,8 @@
                         </ul>
                     </nav>
                 </label>
-                <label class="card" for="item-3" id="song-3">
-                    <img src="imagens/folhas.jpg" alt="">
+                <label class="folha" for="slide-3" id="cursos">
+                    <img src="imagens/folhas.jpg">
                     <h1>Cursos</h1>
                     <nav>
                         <ul>
@@ -98,6 +98,26 @@
             </div>
         </div>
     </section>
+    <!--MENU CONTATO-->
+    <section id="contato">
+        <div class="container">
+            <div class="container-contato">
+                <div class="info">
+                    <h1>Entre em contato:</h1>
+                    <div class="linha"></div>
+                    <ion-icon name="mail-outline"></ion-icon>
+                    <span>vi21cgomes@gmail.com</span>
+                    <ion-icon name="call-outline"></ion-icon>
+                    <span>+55 081 99630-0154</span>
+                    <ion-icon name="location-outline"></ion-icon>
+                    <span>Recife,Pernambuco</span>
+                </div>
+                <img src="imagens/Figura.png">
+            </div>
+        </div>
+    </section>
 
+    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </body>
 </html>
