retirando a barra de rolagem

--- a/index.html
+++ b/index.html
@@ -20,16 +20,19 @@
                 <li><a href="#home">Home</a></li>
                 <li><a href="#about">Sobre Mim</a></li>
                 <li><a href="#portifolio">Experiência</a></li>
-                <li><a href="#contato">Contato</a></li>
             </ul>
         </nav>
     </header>
     <!--MENU HOME-->
     <section id="home">
         <div class="container">
+            <div class="icons">
+                <a href="https://github.com/vitoriacgomes"><ion-icon name="logo-github"></ion-icon></a>
+                <a href="www.linkedin.com/in/vitoriacarvalhog"><ion-icon name="logo-linkedin"></ion-icon></a>
+            </div>
             <div class="titulo">
                 <h1>Vitória Gomes</h1>
-                <p>Creative Developer</p>
+                <p>Developer</p>
             </div>
             <img src="imagens/Prancheta1.png" id="prancheta-dois">
         </div>
@@ -77,7 +80,7 @@
                             <li id="sem-ponto">Tenho experiência a um pouco menos de 1 ano com as seguintes linguagens:</li>
                             <li>HTML - Linguagem de marcação utilizada na construção de páginas na Web. </li>
                             <li>CSS - Mecanismo para adicionar estilo a um documento web.</li>
-                            <li>JavaScript - Liguagem de programação. Juntamente com HTML e CSS, é uma das três principais tecnologias para Front-End.</li>
+                            <li>JavaScript - Liguagem de programação. Juntamente com HTML e CSS, é uma das três principais tecnologias para Desenvolvimento de Software e Front-End.</li>
                         </ul>
                     </nav>
                 </label>
@@ -98,24 +101,7 @@
             </div>
         </div>
     </section>
-    <!--MENU CONTATO-->
-    <section id="contato">
-        <div class="container">
-            <div class="container-contato">
-                <div class="info">
-                    <h1>Entre em contato:</h1>
-                    <div class="linha"></div>
-                    <ion-icon name="mail-outline"></ion-icon>
-                    <span>vi21cgomes@gmail.com</span>
-                    <ion-icon name="call-outline"></ion-icon>
-                    <span>+55 081 99630-0154</span>
-                    <ion-icon name="location-outline"></ion-icon>
-                    <span>Recife,Pernambuco</span>
-                </div>
-                <img src="imagens/Figura.png">
-            </div>
-        </div>
-    </section>
+    
 
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
