add link para contato

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div class="container">
             <div class="icons">
                 <a href="https://github.com/vitoriacgomes"><ion-icon name="logo-github"></ion-icon></a>
-                <a href="www.linkedin.com/in/vitoriacarvalhog"><ion-icon name="logo-linkedin"></ion-icon></a>
+                <a href="https://www.linkedin.com/in/vitoriacarvalhog"><ion-icon name="logo-linkedin"></ion-icon></a>
             </div>
             <div class="titulo">
                 <h1>Vitória Gomes</h1>
