--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vitória Gomes</title>
     <link rel="shortcut icon" href="imagens/logotipo.png" sizes = "16x16">
@@ -43,14 +42,15 @@
             <div class="titulo">
                 <h1>Sobre Mim</h1>
                 <h2>Recife, Pernambuco</h2>
-                <p>Aos 17 anos comecei na área de engenharia ambiental, realizei alguns 
-                    projetos de pesquisa e em 2020 estagiei em uma startup chamada Recibra, 
-                    voltada a logistica reversa de aparelhos eletroeletrônicos e a inclusão digital.
-                    Foi aí que meu interesse pela área de tecnologia começou e neste mesmo ano iniciei
-                    minha faculdade de Análise de Desenvolvimento de Sistemas.
+                <p> Em 2021 fui volutária em uma startup, localizada na UFRPE (Univesidade Federal Rural de Pernambuco),
+                    chamada Recibra. O objetivo da empresa era voltado ao recondicionamento e logistica reversa de aparelhos eletroeletrônicos,
+                    focado na inclusão digital.
+                    Foi aí que meu interesse pela área de tecnologia começou e graças a este ponto inicial estou no meu segundo ano 
+                    em uma graduação de Análise de Desenvolvimento de Sistemas.
                 </p>
-                <p> Hoje já compreendo de desenvolvimento para Front-End com ferramentas como 
-                    HTML, CSS, JavaScript e Python. Estou buscando aprender e me aprimorar cada vez mais.
+                <p> Hoje já tenho compreensão em desenvolvimento para Front-End, dominando ferramentas como 
+                    HTML, CSS, JavaScript e Python. Sou motivada para crescer como profissional, tenho metas como 
+                    aumentar os meus conhecimentos, me destacar na área de desenvolvimento e ser efetivada até 2024.
                 </p>
             </div>
             <img src="imagens/img2.png" id="img-dois">
@@ -80,7 +80,7 @@
                             <li id="sem-ponto">Tenho experiência a um pouco menos de 1 ano com as seguintes linguagens:</li>
                             <li>HTML - Linguagem de marcação utilizada na construção de páginas na Web. </li>
                             <li>CSS - Mecanismo para adicionar estilo a um documento web.</li>
-                            <li>JavaScript - Liguagem de programação. Juntamente com HTML e CSS, é uma das três principais tecnologias para Desenvolvimento de Software e Front-End.</li>
+                            <li>JavaScript - Liguagem de programação. Juntamente com HTML e CSS, é uma das três principais tecnologias para Front-End.</li>
                         </ul>
                     </nav>
                 </label>
